--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.navadroid.androidedittextvalidation.MainActivity">
+    tools:context="com.example.navadroid.androidedittextvalidation.MainActivity"
+    android:orientation="vertical">
 
 
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Validation 1"
+        tools:layout_editor_absoluteX="97dp"
+        tools:layout_editor_absoluteY="54dp"
+        android:onClick="onClick"/>
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Validation 2"
+        tools:layout_editor_absoluteX="100dp"
+        tools:layout_editor_absoluteY="124dp"
+        android:onClick="onClick"/>
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Validation 3"
+        tools:layout_editor_absoluteX="117dp"
+        tools:layout_editor_absoluteY="203dp"
+        android:onClick="onClick"/>
+</LinearLayout>
